RESOLVED FIXED83627
Fix fast/images/exif-orientation.html WebKitTestRunner failure
https://bugs.webkit.org/show_bug.cgi?id=83627
Summary Fix fast/images/exif-orientation.html WebKitTestRunner failure
Anders Carlsson
Reported 2012-04-10 15:11:34 PDT
Fix fast/images/exif-orientation.html WebKitTestRunner failure
Attachments
Patch (1.83 KB, patch)
2012-04-10 15:12 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2012-04-10 15:12:22 PDT
Anders Carlsson
Comment 2 2012-04-10 15:18:36 PDT
Note You need to log in before you can comment on or make changes to this bug.