Fix fast/images/exif-orientation.html WebKitTestRunner failure https://bugs.webkit.org/show_bug.cgi?id=83627

Reviewed by Sam Weinig.

Handle overriding the WebKitShouldRespectImageOrientation preference.

* WebProcess/InjectedBundle/InjectedBundle.cpp:
(WebKit::InjectedBundle::overrideBoolPreferenceForTestRunner):

Canonical link: https://commits.webkit.org/101076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113777 268f45cc-cd09-0410-ab3c-d52691b4dbfc